<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ClosetFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottoms_option"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:text="@string/bottoms"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tops_option" />

    <TextView
        android:id="@+id/outerwear_option"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/outerwear"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottoms_option" />

    <TextView
        android:id="@+id/dresses_option"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:layout_marginTop="36dp"
        android:text="@string/dresses"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outerwear_option" />

    <TextView
        android:id="@+id/shoes_option"
        android:layout_width="61dp"
        android:layout_height="23dp"
        android:layout_marginTop="36dp"
        android:text="@string/shoes"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dresses_option" />

    <TextView
        android:id="@+id/accessories_option"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/accessories"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoes_option" />

    <TextView
        android:id="@+id/tops_option"
        android:layout_width="46dp"
        android:layout_height="30dp"
        android:layout_marginTop="168dp"
        android:text="@string/tops"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_to_closet_button"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginTop="46dp"
        android:background="@color/textColorPrimary"
        android:text="@string/add_to_closet"
        android:textAppearance="@style/TextAppearance.Brand"
        android:textColor="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessories_option"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>