<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorPrimary"
    tools:context=".SignerFragment">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Brand"
        android:textColor="@color/backgroundColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="354dp"
        android:layout_height="217dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Logo"
        android:textColor="@color/backgroundColor"
        android:textSize="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/textColorPrimary"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.Brand"
        android:textColor="@color/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginTop="484dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.Brand"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>